--- a/src/styles/Node.css
+++ b/src/styles/Node.css
@@ -12,7 +12,7 @@
     z-index: 10;
     width: 100%;
     height: 100%;
-    background: url('../../images/start-flag.png') center no-repeat;
+    background: url('../images/start-flag.png') center no-repeat;
     background-size: cover;
 }
 #dragtarget {
@@ -21,7 +21,7 @@
   z-index: 10;
   width: 100%;
   height: 100%;
-  background: url('../../images/finish-flag.png') center no-repeat;
+  background: url('../images/finish-flag.png') center no-repeat;
   background-size: cover;
 }
 
