--- a/src/styles/Grid.css
+++ b/src/styles/Grid.css
@@ -1,13 +1,13 @@
 .Grid {
-    /* text-align: center; */
     font-size: 0;
-    /* margin-top: 100px; */
+    position: relative;
     width: 100%;
-    min-height: 100vh;
+    height: 85%;
   }
 
   .Wrapper {
+    position: relative;
     width: 100%;
-    height: 100vh;
+    height: 100%;
   }
 
