--- a/src/styles/SecondNavbar.css
+++ b/src/styles/SecondNavbar.css
@@ -1,4 +1,5 @@
 .SecondNavbar {
+    position: relative;
     background: #f2eff0;
     height: auto;
     padding: 0px 0px;
@@ -11,13 +12,15 @@
     font-size: 16px;
     font-weight: 600;
     color: #222;
+    border-top: 1px solid rgba(141, 141, 141, 0.514);
+    height: auto;
   }
   
   .SecondNavbar .flex {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 15px 0px;
+    padding: 10px 0px;
     margin: 0px 20px;
   }
 
