--- a/src/styles/Node.css
+++ b/src/styles/Node.css
@@ -1,20 +1,38 @@
 .Node {
-    width: 30px;
-    height: 30px;
+    width: 35px;
+    height: 35px;
     outline: 1px solid rgb(37, 37, 37);
     /* outline: 1px solid rgb(165, 165, 165); */
     display: inline-block;
     position: relative;
   }
+
+  #dragstart::before {
+    position: absolute;
+    content: '';
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-right: 4px solid black;
+    border-top: 4px solid black;
+    transform: rotate(45deg) scale(1.2);
+    top: 10px;
+    left: 7px;
+    transition: all .2s ease-in-out;
+  }
+
+  #dragstart:hover::before {
+    transform: rotate(45deg) scale(0.5);
+  }
    
   #dragstart {
     position: relative;
-    outline: 1px solid #000;
-    z-index: 10;
+   /*  outline: 1px solid #000;
+    z-index: 10; */
     width: 100%;
     height: 100%;
-    background: url('../images/start-flag.png') center no-repeat;
-    background-size: cover;
+    /* background: url('../images/start-flag.png') center no-repeat;
+    background-size: cover; */
 }
 #dragtarget {
   position: relative;
@@ -60,6 +78,7 @@
   }
   
   .Node-wall {
+    transition: all .2s ease-in-out;
     background-color: rgb(43, 43, 43);
   }
   
