Add mouse events to finishNode

--- a/src/styles/Node.css
+++ b/src/styles/Node.css
@@ -27,22 +27,24 @@
    
   #dragstart {
     position: relative;
-   /*  outline: 1px solid #000;
-    z-index: 10; */
     width: 100%;
     height: 100%;
-    /* background: url('../images/start-flag.png') center no-repeat;
-    background-size: cover; */
-}
-#dragtarget {
-  position: relative;
-  outline: 1px solid #000;
-  z-index: 10;
-  width: 100%;
-  height: 100%;
-  background: url('../images/finish-flag.png') center no-repeat;
-  background-size: cover;
-}
+  }
+
+  #dragtarget {
+    position: absolute;
+    margin-left: 5px;
+    margin-top: 5px;
+    width: 70%;
+    height: 70%;
+    background: url('../images/circle.png') center no-repeat;
+    background-size: cover;
+    transition: all .2s ease-in-out;
+  }
+
+  #dragtarget:hover {
+    transform: scale(0.5);
+  }
 
   .Node-visited {
     animation-name: visitedAnimation;
@@ -81,7 +83,7 @@
     transition: all .2s ease-in-out;
     background-color: rgb(43, 43, 43);
   }
-  
+
   .Node-shortest-path {
     animation-name: shortestPath;
     animation-timing-function: ease-out;
