--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
     width: 100%;
     height: 100vh;
-   /*  background: #444444; */
-    background: rgb(241, 241, 241);
+    background: #444444;
+    /* background: rgb(241, 241, 241); */
 }
